[package]
name = "oxide-dco"
version = "0.1.0"
authors = ["Olexander Yermakov <olexander.yermakov@gmail.com>"]
edition = "2018"

[profile.release]
# optimize for size ('z' would optimize even more)
opt-level = 's'
# link with link time optimization (lto).
lto = true

[profile.dev]
debug = true

[dependencies]
stm32f0xx-hal = {version = "0.17.1", features = ["stm32f030", "rt", "stm32f030x6"]}
embedded-graphics = "*"
embedded-hal = "*"
cortex-m-rt = "*"
cortex-m-rtfm = "*"
cortex-m = "*"
cortex-m-semihosting = "*"
panic-semihosting = "*"
eurorack-oxide-utils = "*"
ssd1306 = "*"
